# PreparedSource2OHDSI

./: .gitignore  INSTALL.md  README.md  pyproject.toml
map/ohdsi/: build_concept_tables_for_mapping.py  map_prepared_source_to_ohdsi_cdm.py
map/ohdsi/mappings/: README.md  build_reverse_mappings.py  oid_to_vocabulary_id.json  vocabulary_to_oid.json
map/ohdsi/utilities/: basic_mapped_data_stats.py  db_configure.py  jdbc_sql_loader.py  write_parquet_files_as_single_csv.py
map/ohdsi/utilities/atlas/: Dockerfile
map/ohdsi/utilities/delta/: Databricks.md  populate_cdm_source.py  publish_ohdsi_parquet_as_delta_tables.py
map/ohdsi/utilities/hades/: Dockerfile
map/ohdsi/utilities/sqlserver/: generate_inserts_for_default_schemas.sh  transfer_parquet_files_to_sql_server.py  transfer_psql_inserts_54.sql  (+4 more)
map/prepared_source/cda/: README.md  cda_to_prepared_source.py  cda_to_prepared_source_fragments.py  clean_combine_prepared_source_fragments.py
map/prepared_source/csv/: stage_streamlined_prepared_source.py
map/prepared_source/synthea/: DataBricks.md  README.md  SyntheCSV.md  config.json.example  map_synthea_to_prepared_source.py
map/prepared_source/utilities/: ps2ohdsi_pipeline_runner.py
src/: _build_prepared_source_sql_template.py  _get_ohdsi_data_types_to_json.py  _write_ohdsi_classes.py  ohdsi_datatypes_5_3_1.json  ohdsi_datatypes_5_4.json  prepared_source_sql_template.sql
src/preparedsource2ohdsi/: base_ohdsi_cdm.py  mapping_utilities.py  ohdsi_cdm_5_3_1.py  ohdsi_cdm_5_4.py  prepared_source.py
tests/: gender_mappings.csv  test_mapping_utilities.py
(+46 files in other folders)
